--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ pygments: true
 baseurl: /chartsnthings
 permalink: /:year/:month/:title.html
 description: Charts and other junk from Kevin Quealy
-url: http://kpq.github.io
+url: http://kpq.github.io/chartsnthings
